# lei_laser

./: .gitignore  PROGRESS.md  PROJECT_SUMMARY.md  README.md  qt_deploy_run_guide.md  rockchip_rk3566_environment.md
.claude/: settings.local.json
.omc/sessions/: 14ec0c49-020d-4d7d-ae9b-f74cb9cd8d3d.json  20292e4e-0097-47d3-bc74-2eb2da150490.json  66551796-a4d5-4c7e-86f2-c79d5abfb16e.json  6fb3bbea-6e52-4e1d-b65f-b8a09b6eda83.json  9bd51c04-7ed0-486f-a60d-8bafe391ed26.json
.omc/state/: agent-replay-3ad9ab29-d437-493c-a5be-293595b5aac8.jsonl
app/: LeiLaser.pro  LeiLaserUI  Makefile
app/src/: main.cpp
app/src/core/: cam_engine.cpp  cam_engine.h  serial_comm.cpp  serial_comm.h
app/src/network/: wifi_server.cpp  wifi_server.h
app/src/ui/: mainwindow.cpp  (+1 more)
docs/: PWM_Laser_Guide.md  SPI_Signal_Guide.md  UART_Controller_Guide.md
kernel/: .galvo.ko.cmd  .galvo.mod.o.cmd  .galvo.o.cmd  .galvo_drv.o.cmd  .galvo_ioctl.o.cmd  .pwm_laser.ko.cmd  .pwm_laser.mod.o.cmd  .pwm_laser.o.cmd  .pwm_laser_drv.o.cmd  .pwm_laser_ioctl.o.cmd  Makefile  galvo.ko  galvo_drv.c  galvo_ioctl.c  galvo_ioctl.h  modules.order  pwm_laser.ko  pwm_laser_drv.c  pwm_laser_ioctl.c  pwm_laser_ioctl.h
kernel/.tmp_versions/: galvo.mod  pwm_laser.mod
reference/: app.c  app_uart.c  参考代码Arduino_Ji_Guang_Da_Biao_Ji.txt
user/: CMakeLists.txt  Makefile  galvo_app  galvo_app.c  galvo_hal.c  galvo_hal.h  galvo_ioctl.h  pwm_app  pwm_app.c  pwm_laser_hal.c  pwm_laser_hal.h  pwm_laser_ioctl.h  uart_controller  uart_controller.c
user/.omc/sessions/: 14ec0c49-020d-4d7d-ae9b-f74cb9cd8d3d.json
